Added 'streamProviderList' variable + minor changes