@@ -9,7 +9,6 @@ import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
 import java.lang.reflect.Type;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Future;
 import org.apache.hc.client5.http.async.methods.SimpleHttpRequest;
@@ -23,7 +22,10 @@ import org.apache.hc.client5.http.impl.async.HttpAsyncClients;
  * @author janii
  */
 public class MovieDataController {
-    List<Integer> PROVIDER_IDS = Arrays.asList(337, 8, 119, 76, 323, 338, 2, 350, 2029, 1899);
+    
+    // List of streaming providers used in the app
+    private final List<Integer> PROVIDER_IDS = List.of(337, 8, 119, 76, 323, 338, 2, 350, 2029, 1899);
+    private List<StreamingProvider> streamProviderList;
     
     public PopularMoviesResponse getPopularMovies(){
         
@@ -62,22 +64,23 @@ public class MovieDataController {
         // TODO:
         // This function doesn't need be called each time.
         // We can fetch this info only on first time and save to a local json
-        fetchStreamingProviders();
-        
+        if(streamProviderList == null || streamProviderList.isEmpty())
+            fetchStreamingProviders();
+        else {
+            // TODO
+        }
         return tempMovieList;
     }  
     
     private void fetchStreamingProviders() {
         SimpleHttpResponse response1;
-        
+
         try (CloseableHttpAsyncClient httpclient = HttpAsyncClients.createDefault()) {
             httpclient.start();
             SimpleHttpRequest request1 = SimpleRequestBuilder.get("https://api.themoviedb.org/3/watch/providers/movie?language=en-US&watch_region=FI").build();
             request1.addHeader("Authorization", "Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiJjZDc4ZTFkOGE4ZDkyOTc3ODhkZmJlM2U4ZjFmODI2MiIsIm5iZiI6MTcyNjY0NzQxMy4zMTU5MzUsInN1YiI6IjY2ZWE4YjQ0NTE2OGE4OTZlMTFmNDkxZCIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.-Nh_jobP1QsTwiihO2YVhrRTuaX89mle0qVx_nKxZEs");
             request1.addHeader("accept", "application/json");
-            
             Future<SimpleHttpResponse> future = httpclient.execute(request1, null);
-            // and wait until response is received
             response1 = future.get();
             System.out.println(request1.getRequestUri() + "->" + response1.getCode());
 
@@ -85,12 +88,13 @@ public class MovieDataController {
             Type streamingResponseType = new TypeToken<StreamingResponse>(){}.getType();
             StreamingResponse response = gson.fromJson(response1.getBodyText(), streamingResponseType);
             
-            List<StreamingProvider> providers = response.getResults()
+            // Filter providers to only have ones that are needed
+            streamProviderList = response.getResults()
                     .stream()
                     .filter(p -> PROVIDER_IDS.contains(p.provider_id))
                     .collect(Collectors.toList());
-            
-                for (StreamingProvider provider : providers) {
+
+            for (StreamingProvider provider : streamProviderList) {
                     System.out.println(provider.provider_name + " " + provider.provider_id);
             }
         
